--- a/YearbookPage/YearbookPage/yearbookpage12/Page12.html
+++ b/YearbookPage/YearbookPage/yearbookpage12/Page12.html
@@ -1,10 +1,279 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Yearbook page 12</title>
+    <style>
+        .grid-container {
+            display: inline-grid;
+            width: 850px;
+            grid-template-columns: 26% 37% 37%;
+        }
+
+        .grid-container2 {
+            display: inline-grid;
+            width: 900px;
+            grid-template-columns: 26% 74%;
+            padding: 7px;
+        }
+
+        .titlecontainergrid {
+            display: inline-grid;
+            width: 900px;
+            grid-template-columns: 35% 65%;
+            padding: 7px;
+        }
+
+        .pagetitle {
+            width: 400px;
+            padding: 10px;
+        }
+
+        #maintitle {
+            text-align: right;
+            font-family: sans-serif;
+            font-weight: 100;
+            transform: scale(.9, 1.7);
+            position: relative;
+            top: 10px;
+            left: 20px;
+        }
+
+        #uparrow {
+            background-color: lightskyblue;
+            color: white;
+        }
+
+        #pagesubtitle {
+            font-family: sans-serif;
+            font-size: 14px;
+            float: right;
+            position: absolute;
+            top: 43px;
+            left: 440px;
+        }
+
+        .profile1 {
+            padding: 5px;
+            font-size: 30px;
+            text-align: center;
+        }
+
+
+
+        #quote1left {
+            background-color: tan;
+            font-size: 14px;
+            padding: 5px;
+            margin-left: 20px;
+        }
+
+        #quote1right {
+            background-color: tan;
+            font-size: 14px;
+            padding: 5px;
+        }
+
+        #profileimage1 {
+            margin-bottom: -22px;
+            margin-left: 60px;
+        }
+
+        #name1 {
+            width: 100%;
+            height: 22px;
+            text-align: right;
+            padding-top: 5px;
+            padding-right: 5px;
+            font-family: 'Times New Roman';
+            font-size: 14px;
+            background-color: brown;
+            color: white;
+        }
+
+        .profile2 {
+            padding: 5px;
+            font-size: 30px;
+            text-align: center;
+        }
+
+        #profileimage2 {
+            margin-bottom: -22px;
+            margin-left: 60px;
+        }
+
+        #name2 {
+            width: 100%;
+            height: 22px;
+            text-align: right;
+            padding-top: 5px;
+            padding-right: 5px;
+            font-family: 'Times New Roman';
+            font-size: 14px;
+            background-color: brown;
+            color: white;
+        }
+
+        #quote2left {
+            background-color: tan;
+            font-size: 14px;
+            padding: 5px;
+            margin-left: 20px;
+        }
+
+        #quote2right {
+            background-color: tan;
+            font-size: 14px;
+            padding: 5px;
+        }
+
+        .captions {
+            font-family: 'Arial Narrow';
+            font-size: 12px;
+            text-align: right;
+            padding-right: 7px;
+        }
+
+        .numbers {
+            color: white;
+            background-color: lightskyblue;
+            padding-left: 2px;
+            padding-right: 2px;
+        }
+
+        #linebreak {
+            width: 923px;
+            color: cadetblue;
+            background-color: cadetblue;
+            height: 12px;
+        }
+
+        .images {
+            padding-left: 5px;
+        }
+    </style>
 </head>
 <body>
 
+    <div class="titlecontainergrid">
+        <div class="pagetitle">
+            <h1 id="maintitle">GOING <span id="uparrow">UP</span> IN SMOKE</h1>
+        </div>
+        <div id="pagesubtitle">
+            <p><i>Two stage crew members describe how the smoke machine<br />made the antics backstage more dramatic than the show itself</i></p>
+        </div>
+    </div>
+    <div class="grid-container">
+        <!--complete grid-->
+        <div class="profile1">
+            <div id="profileimage1">
+                <img src="IMG_6125.png" height="115" width="120" alt="dylan" />
+            </div>
+            <div>
+                <h3 id="name1">DYLAN PASHKE ('16)</h3>
+            </div>
+        </div>
+        <div class="quote1">
+            <p id="quote1left">
+                "it was the senior citizen show, and everything<br />
+                was going well. we were sitting backstage and<br />
+                all of a sudden we saw <b>
+                    smoke coming from the<br />
+                    back passageway.
+                </b> it takes a while for the smoke<br />
+                machine to warm up, so we had to pre-heat it<br />
+                during intermission in order for it to be ready
+            </p>
+        </div>
+        <div class="quote1">
+            <p id="quote1right">
+                by the last scene. However, it actually turned on<br />
+                during intermission and we did not realize until <br />
+                it was too late. The smoke was spreading, some<br />
+                might even say <b>it was billowing.</b> The smoke started<br />
+                rising from under the stage into the scene<br />
+                before it was needed!"
+            </p>
+        </div>
+        <div class="profile2">
+            <div id="profileimage2">
+                <img src="EMILY.png" height="115" width="140" alt="emily" />
+            </div>
+            <div>
+                <h3 id="name2">EMILY GAGGIOLI ('16)</h3>
+            </div>
+        </div>
+        <div class="grid-item5">
+            <p id="quote2left">
+                "Pushing a freshman out of the way, <b>
+                    I dove<br />
+                    under the stage
+                </b> trying to find the off-button<br />
+                through all the fog. I did eventually find the<br />
+                button, but the whole backstage area was full of<br />
+                smoke. Still in a bit of a panic, I had everyone<br />
+                running around trying to disperse it. As I passed
+            </p>
+        </div>
+        <div class="grid-item6">
+            <p id="quote2right">
+                a crack in the set, I saw that the stage was<br />
+                <b>completely fogged over.</b> There was only three<br />
+                minutes before the next scene started, so there<br />
+                was nothing I could do. Thankfully <b>
+                    the cloud<br />
+                    started to lift,
+                </b> but the actors may or may not<br />
+                have gone on stage with a bit of smoke."
+            </p>
+        </div>
+    </div>
+    <div id="linebreak">
+
+    </div>
+    <div class="grid-container2">
+        <div class="captions">
+            <p>
+                <span class="numbers">1</span><b><i> BRINGING THE OUTDOORS IN</i></b> Ellard,<br />
+                played by John McCloskey ('15), brought the<br />
+                outdoors in to teach the foreigner, Charlie,<br />
+                some new words. The part Ellard was perfect<br />
+                for john, as he seemed to become Ellard as<br />
+                he stepped out on stage. "John was so<br />
+                enthusiastic and full of energy, it was always<br />
+                a blast to watch," said Margaret Selkey ('16)<br />
+                who played caroline. <span class="numbers">2</span> <b>
+                    <i>
+                        CHATTING THE <br />
+                        DAY AWAY
+                    </i>
+                </b> Ellard teaches Charlie, played by<br />
+                Landon Quinney('15), English using props<br />
+                from around Betty's cabin. <span class="numbers">3</span> <b>
+                    <i>
+                        BLUEMAN<br />
+                        GROUP
+                    </i>
+                </b> Grace Eimerman ('18), Riley Swart<br />
+                ('18), and Kirsten Meier ('16) from the<br />
+                bluegrass band practiced the songs between<br />
+                shows. <span class="numbers">4</span> <b><i>DINNER AND A SHOW</i></b> Charlie<br />
+                told a story in his "foreign language." In<br />
+                reality, Charlie's language is just gibberish<br />
+                he used to pretend he was a foreigner, which<br />
+                forms the basis of the play. "That picture is<br />
+                one of my favorite scenes, right before Charlie<br />
+                tells a story in his 'language,'" Selkey recalled.<br />
+                "It was so easy to act genuinely excited in<br />
+                that scene because of how perfectly Landon<br />
+                performed it every time!"
+            </p>
+        </div>
+        <div class="images">
+            <img src="1.jpg" height="301" width="423" alt="John" />
+            <img src="3.jpg" height="301" width="228" alt="bluegrass band" />
+            <img src="2.jpg" height="411" width="656" alt="eggs" />
+        </div>
+    </div>
 </body>
 </html>
