Updated link to page 12

--- a/YearbookPage/YearbookPage/Index.html
+++ b/YearbookPage/YearbookPage/Index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <h3><a href="page12.html">Page 12</a></h3>
+    <h3><a href="yearbookpage12/Page12.html">Page 12</a></h3>
     <h3><a href="page14.html">Page 14</a></h3>
     <h3><a href="page22.html">Page 22</a></h3>
     <h3><a href="page24.html">Page 24</a></h3>
