--- a/YearbookPage/YearbookPage/Index.html
+++ b/YearbookPage/YearbookPage/Index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Yearbook</title>
+    <link href="css/bootstrap.css" rel="stylesheet" />
+
 </head>
 <body>
     <h3><a href="page12.html">Page 12</a></h3>
