Fixed directing to and from homepage

--- a/YearbookPage/YearbookPage/Page12.html
+++ b/YearbookPage/YearbookPage/Page12.html
@@ -197,7 +197,7 @@
         </div>
         <div class="profile2">
             <div id="profileimage2">
-                <img src="EMILY.png" height="115" width="140" alt="emily" />
+                <img src="/yearbookpage12/EMILY.png" height="115" width="140" alt="emily" />
             </div>
             <div>
                 <h3 id="name2">EMILY GAGGIOLI ('16)</h3>
@@ -270,10 +270,12 @@
             </p>
         </div>
         <div class="images">
-            <img src="1.jpg" height="301" width="423" alt="John" />
-            <img src="3.jpg" height="301" width="228" alt="bluegrass band" />
-            <img src="2.jpg" height="411" width="656" alt="eggs" />
+            <img src="/yearbookpage12/1.jpg" height="301" width="423" alt="John" />
+            <img src="/yearbookpage12/3.jpg" height="301" width="228" alt="bluegrass band" />
+            <img src="/yearbookpage12/2.jpg" height="411" width="656" alt="eggs" />
         </div>
+        <div class="captions"><a href="Index.html">Click here to return to homepage</a></div>
     </div>
+    
 </body>
 </html>
