--- a/YearbookPage/YearbookPage/page40.HTML
+++ b/YearbookPage/YearbookPage/page40.HTML
@@ -3,6 +3,13 @@
 
 <!DOCTYPE html>
 <html>
+        <head>
+                <meta charset="utf-8" />
+                <title>Page40MariamKhan</title>
+                <link href="css/bootstrap.css" rel="stylesheet" />
+            
+            </head>
+
 <body>
 
 <h1>My First Heading</h1>
@@ -11,7 +18,7 @@
 
 <img src="IMG_8398.jpg" alt= "IMG_8398.com" width = "28%" align = "right" />
 
-<div style="background-color:#800080;color:black;padding:20px;" >
+<div style="background-color:#6C586D;color:black;padding:20px;" >
 <p> 
     After qualifying for state in the 2014, the Brookfield Central
     Boys golf team took a huge hit, losing 60 percent of their
