Lots of editing

--- a/YearbookPage/YearbookPage/page22.html
+++ b/YearbookPage/YearbookPage/page22.html
@@ -2,54 +2,66 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link href="css/boostrap.css" rel="text/stylesheet" />
-    <title></title>
+    <link href="css/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="StyleSheet.css" />
+    <title>Yearbook Page 22</title>
 </head>
 <body>
-    <header>  <span>RAIN</span> or <span>SHINE</span>  </header>
-    <div>
+    <p id="first">  RAIN or SHINE  </p>
+        <div>
         A STUCO Spring Carnival is carried <br />
         out despite inclement weather
     </div>
-    <img src="DSC_0255.png" alt="Crowd of students" id="photo" />
-    <div>
-        <p>
-            An event plagued by rain the year before, this year’s Student
-            Council Carnival was again threatened to be reluctantly
-            moved indoors. But luckily the weather cooperated and the
-            event was held out on the front lawn. “This was the first
-            year the carnival was outside - we tried to do it outside
-            last year but it rained. I think it went really well. We were
-            contemplating on moving it inside but then we wouldn’t
-            have been able to tie dye and have some of the inflatables,”
-            said Rachel Kolb (‘16), a co-chair of the event.
-            Made enjoyable by the inclusion of most of the clubs,
-            students were able to walk from booth to booth and
-            participate in activities put on by their fellow students.
-            Jessica Olson (‘18) remembered “activities like dunking
-            teachers in a tank, tie-dye, live music, and they gave away
-            cotton candy and it was actually pretty good.” Evident by the
-            line of students spanning across the parking lot, the free
-            cotton candy was a hit with the students.
+    <div id="container">
+        <div id="block">
 
-            Perhaps unsurprisingly, the most popular event was
-            the tie-dye spring fling t-shirts hosted by student council.
-            “I think tie dying was also a huge success because you
-            could create your own shirt and personalize it, also student
-            council has never done anything like that before so it was
-            different.”
-            Just a few booths down was the Red Kettle Club table,
-            where club treasurer Lucy Kwiatkowski (‘16) was handing
-            out snow cones, “We went with red snow cones because
-            it’s red kettle club.” The group was attempting to draw in
-            more members, and strangely enough, meeting attendance
-            doubled the next week. Continuing, she said “Looking
-            back, I just remember that my hands were really cold from
-            scooping all the crushed ice.”
+            <div id="text">
+                <p>
+                    <div>
+                        An event plagued by rain the year before, this year’s Student
+                        Council Carnival was again threatened to be reluctantly
+                        moved indoors. But luckily the weather cooperated and the
+                        event was held out on the front lawn. “This was the first
+                        year the carnival was outside - we tried to do it outside
+                        last year but it rained. I think it went really well. We were
+                        contemplating on moving it inside but then we wouldn’t
+                        have been able to tie dye and have some of the inflatables,”
+                        said Rachel Kolb (‘16), a co-chair of the event.
+                        <br/>
+                            Made enjoyable by the inclusion of most of the clubs,
+                        students were able to walk from booth to booth and
+                        participate in activities put on by their fellow students.
+                        Jessica Olson (‘18) remembered “activities like dunking
+                        teachers in a tank, tie-dye, live music, and they gave away
+                        cotton candy and it was actually pretty good.” Evident by the
+                        line of students spanning across the parking lot, the free
+                        cotton candy was a hit with the students.
+                    </div>
+                    <div>
+                        Perhaps unsurprisingly, the most popular event was
+                        the tie-dye spring fling t-shirts hosted by student council.
+                        “I think tie dying was also a huge success because you
+                        could create your own shirt and personalize it, also student
+                        council has never done anything like that before so it was
+                        different.”
+                        <br />
+                        Just a few booths down was the Red Kettle Club table,
+                        where club treasurer Lucy Kwiatkowski (‘16) was handing
+                        out snow cones, “We went with red snow cones because
+                        it’s red kettle club.” The group was attempting to draw in
+                        more members, and strangely enough, meeting attendance
+                        doubled the next week. Continuing, she said “Looking
+                        back, I just remember that my hands were really cold from
+                        scooping all the crushed ice.”
+                        <br />
+                        <span id="name">
+                        </span>
+                    </div>
+                </p>
+            </div>
+        </div>
 
-            // EMMA SHIBILSKI
-        </p>
     </div>
-
+    <a href="Index.html">Index</a>
 </body>
 </html>
