--- a/YearbookPage/YearbookPage/page40.HTML
+++ b/YearbookPage/YearbookPage/page40.HTML
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <body>
 
-<h1>My First Heading</h1>
+<h1>woot page 40 is here</h1>
 
 <button type="button" class="btn btn-dark">Dark</button>
 
